Add project management features and enhance site layout
- Implement project detail pages with dynamic content rendering
- Add project collection and filtering in Eleventy configuration
- Integrate Netlify Identity for authentication in the admin panel
- Update styles for project display and responsiveness
- Create sample project markdown for demonstration
- Configure Netlify CMS for project management

--- a/netlify.toml
+++ b/netlify.toml
@@ -8,6 +8,15 @@
   port = 8080
   
 [[redirects]]
+  from = "/admin/*"
+  to = "/admin/index.html"
+  status = 200
+  
+[[redirects]]
   from = "/*"
   to = "/404.html"
   status = 404
+
+# Enable Netlify Identity for authentication
+[template.environment]
+  NETLIFY_IDENTITY_ENABLED = "true"
