--- a/netlify.toml
+++ b/netlify.toml
@@ -23,6 +23,6 @@
   to = "/404.html"
   status = 404
 
-# Enable Netlify Identity for authentication
+# Enable Netlify Identity
 [template.environment]
   NETLIFY_IDENTITY_ENABLED = "true"
