--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
   name: git-gateway
   branch: main
+publish_mode: editorial_workflow
 
 media_folder: "src/images/uploads"
 public_folder: "/images/uploads"
@@ -12,6 +13,7 @@ collections:
     folder: "src/_projects"
     create: true
     slug: "{{slug}}"
+    extension: "md" # Ensure files are created with the .md extension
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Description", name: "description", widget: "text" }
