Update Pages “projects”

--- a/src/_data/projects.json
+++ b/src/_data/projects.json
@@ -1,4 +1,4 @@
 {
   "heroHeading": "Collections",
-  "heroText": "Projects and groups of artworks. "
+  "heroText": "Explore my body of work through their collections."
 }
